Closed Bug 330727 Opened 18 years ago Closed 18 years ago

[BeOS] can't enter file paths in urlbar directly

Categories

(Core :: DOM: Navigation, defect, P3)

x86
BeOS
defect

Tracking

()

RESOLVED FIXED
mozilla1.8.1

People

(Reporter: Biesinger, Assigned: Biesinger)

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

currently, I need to enter the file:// prefix for paths on beos, contrary to all the other platforms, because nsDefaultURIFixup is missing a case for beos
Assignee: adamlock → cbiesinger
OS: Linux → BeOS
Attached patch patchSplinter Review
Attachment #215313 - Flags: superreview?(darin)
Attachment #215313 - Flags: review?(sergei_d)
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla1.8.1
Comment on attachment 215313 [details] [diff] [review]
patch

Heh, thanks for noticing it:)
r=sergei_d
Attachment #215313 - Flags: review?(sergei_d) → review+
Attachment #215313 - Flags: superreview?(darin) → superreview+
Checking in docshell/base/nsDefaultURIFixup.cpp;
/cvsroot/mozilla/docshell/base/nsDefaultURIFixup.cpp,v  <--  nsDefaultURIFixup.cpp
new revision: 1.46; previous revision: 1.45
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Attachment #215313 - Flags: approval-branch-1.8.1?(darin)
Attachment #215313 - Flags: approval-branch-1.8.1?(darin) → approval-branch-1.8.1+
fixed on MOZILLA_1_8_BRANCH
Checking in docshell/base/nsDefaultURIFixup.cpp;
/cvsroot/mozilla/docshell/base/nsDefaultURIFixup.cpp,v  <--  nsDefaultURIFixup.cpp
new revision: 1.44.18.1; previous revision: 1.44
done
Keywords: fixed1.8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: