bug 330727 add BeOS to XP_UNIX ifdef to allow entering local paths in the urlbar directly r=sergei_d sr=darin